updated with working version within Intellij IDE